# videoapi

./: .gitignore  README.md
req/: pyproject.toml  requirements-dev.txt
test/: test_blob.py  test_secrets.py  test_version.py
videoapi/: main.py  requirements.txt  test_upload.py
videoapi/DF_HttpTrigger/: __init__.py
videoapi/api/: video_api.py
videoapi/factories/: auth_factory.py  source_factory.py
videoapi/models/: files.py  token.py  user.py
videoapi/services/: azure_active_directory.py  blob_storage.py  secret_scope.py
